# minippa

./: .gitignore  Cargo.toml  Justfile  README.md  config.example.toml
.github/workflows/: release.yml
debian/: minippa.service
src/: args.rs  bash.rs  config.rs  data_dir.rs  gpg.rs  main.rs  reindex.rs  system_deps.rs
src/gpg/: config.rs  mod.rs
src/index/: ctl.rs  entry.rs  find.rs  list.rs  make_install_script.rs  mod.rs  package.rs  raw_index.rs  request.rs  task.rs  upload.rs  write_gpg_key.rs
src/web/: app_error.rs  app_state.rs  errors.rs  install_sh.rs  list.rs  mod.rs  one.rs  templates.rs  upload.rs  upload_error.rs
templates/: list.html  one.html
