[package]
name = "minippa"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-http = { version = "0.6", features = ["fs"] }
anyhow = "1.0"
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
async-tempfile = "0.7"
