[package]
name = "minippa"
version = "1.0.1"
edition = "2024"
license = "MIT"
description = "A single-binary executable that acts as a Debian package server"

[dependencies]
tower-http = { version = "0.6", features = ["fs"] }
anyhow = "1.0"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.9"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
async-tempfile = "0.7"
askama = "0.14"
chrono = "0.4"
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true

[package.metadata.deb]
assets = [
    [
        "target/release/minippa",
        "usr/bin/minippa",
        "755",
    ],
    [
        "debian/minippa.service",
        "usr/lib/systemd/system/minippa.service",
        "644",
    ],
]
copyright = "2023, Ilya Bylich."
depends = "$auto, systemd"
extended-description = "A single-binary executable that acts as a Debian package server"
maintainer = "minippa developer <ibylich@gmail.com>"
maintainer-scripts = "debian/scripts"
priority = "optional"
section = "admin"
